# tproj

./: Cargo.toml  README.md
cleaner/: go.mod  go.sum  tproj.toml
cleaner/cmd/: main.go
scaffolder/: Cargo.toml  config.toml  tproj.toml
scaffolder/src/: args.rs  cleaner.rs  config.rs  folder.rs  main.rs  open_latest.rs  terminal.rs
scaffolder/src/macos/: heimsoft.tproj.plist
