[package]
name = "tproj"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dirs = "4.0.0"
getopts = "0.2.21"
random_str = "0.1.2"
simplelog = "0.12.1"
toml = "0.7.2"
log = "0.4.17"
simple-home-dir = "0.2.1"
[target.'cfg(target_os = "windows")'.dependencies]
win32console = "0.1.5"
